Kea 1.7.1 released on Oct 30, 2019

1681.	[func]		fdupont
	Added new command config-backend-pull which forces the server
	to immediately poll the configuration updates from the
	configuration backend
	(Gitlab #904)

1680.	[bug,build]	Kristoffer Larsen
	A bug in Makefile has been fixed. The changes made to
	src/lib/dhcpsrv/alloc_engine_messages.mes are now picked up
	properly.
	(Gitlab #752)

1679.	[func]		fdupont
	Added new commands to the lease_cmds hooks library to search for
	leases by hardware address, client-id, DUID and hostname. Now
	hostnames are stored in lower case within the lease database.
	(Gitlab #393)

1678.	[build]		fdupont
	The arguments passed to configure are now stored and are available
	using -W command line option.
	(Gitlab #869)

1677.	[doc]		wlodek
	Sample configs now all use the same paths for control sockets.
	(Gitlab #795)

1676.	[func]		fdupont
	A new hook - flex-option - has been developed. It allows setting
	up DHCPv4 and DHCPv6 option values dynamically, using expression.
	This capability is very useful when you want to generate option
	value procedurally. For details, see new section "Flexible Option
	for Option value settings" in the Kea Administrator Reference
	Manual.
	(Gitlab #219,!523, git 2bf854c029b9b07ee6161bc1fcb4dfdc9846ee42)

1675.	[func]		fdupont
	Both DHCPv4 and DHCPv6 can now listen on and send responses
	to a custom UDP port, as specified with the -p command line
	option. This capability is mostly useful for testing.
	(Gitlab #677,!548, git 47e709fb7b89464d4473e8c7cb138f539042d68b)

1674.	[perf]		fdupont
	Added a Multi Threading Manager singleton class in the util library.
	(Gitlab #962,!566, git 66b090e54b45bdeefda266ddd62e42b46ed48d1d)

1673.	[bug]		tmark
	Fixed a bug introduced in Kea 1.6.0 (see #539) that caused
	kea-dhcp4 and kea-dhcp6 to discard inbound packets containing
	string options that consist solely of nulls.  The servers
	will now quietly omit empty or all-null string options from
	inbound packets.